Fixed abilities text-align

--- a/site/source/scss/_types.scss
+++ b/site/source/scss/_types.scss
@@ -1,5 +1,5 @@
 .type {
-  border-radius: 10px;
+  border-radius: 7px;
   min-width: 50px;
   padding: 5px;
   display: flex;
@@ -11,7 +11,7 @@
   background-color: #a8a87b;
 }
 
-.fight {
+.fighting {
   background-color: #c12f29;
 }
 
